[feat] feature/chat websocket 구현 test